--- a/BeestjeOpEenFeestje/Views/Account/Register.cshtml
+++ b/BeestjeOpEenFeestje/Views/Account/Register.cshtml
@@ -4,31 +4,42 @@
 
 <form asp-action="Register" method="post">
     <div>
-        <label asp-for="Username"></label>
+        <label asp-for="Username">Naam</label>
         <input asp-for="Username" class="form-control" />
         <span asp-validation-for="Username" class="text-danger"></span>
     </div>
 
     <div>
-        <label asp-for="Password"></label>
+        <label asp-for="Password">Wachtwoord</label>
         <input asp-for="Password" type="password" class="form-control" />
         <span asp-validation-for="Password" class="text-danger"></span>
     </div>
 
     <div>
-        <label asp-for="Address"></label>
+        <label asp-for="CustomerCard">Klantenkaart</label>
+        <select asp-for="CustomerCard" class="form-control">
+            <option value="0">No Card</option>
+            <option value="1">Silver</option>
+            <option value="2">Gold</option>
+            <option value="3">Platinum</option>
+        </select>
+        <span asp-validation-for="CustomerCard" class="text-danger"></span>
+    </div>
+
+    <div>
+        <label asp-for="Address">Adres</label>
         <input asp-for="Address" class="form-control" />
         <span asp-validation-for="Address" class="text-danger"></span>
     </div>
 
     <div>
-        <label asp-for="Email"></label>
-        <input asp-for="Email" type="email" class="form-control" />
+        <label asp-for="Email">E-mail</label>
+        <input asp-for="Email" class="form-control" />
         <span asp-validation-for="Email" class="text-danger"></span>
     </div>
 
     <div>
-        <label asp-for="PhoneNumber"></label>
+        <label asp-for="PhoneNumber">Telefoonnummer</label>
         <input asp-for="PhoneNumber" class="form-control" />
         <span asp-validation-for="PhoneNumber" class="text-danger"></span>
     </div>
