--- a/BeestjeOpEenFeestje/Views/Shared/_Layout.cshtml
+++ b/BeestjeOpEenFeestje/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="Account" asp-action="Register">Register
+                            <a class="nav-link text-dark" asp-controller="Account" asp-action="Register">Nieuwe gebruiker
                             </a>
                         </li>
                     </ul>
