login works roles work but still english

--- a/BeestjeOpEenFeestje/Views/Account/Password.cshtml
+++ b/BeestjeOpEenFeestje/Views/Account/Password.cshtml
@@ -1,4 +1,4 @@
-﻿@model string
+﻿@model BeestjeOpEenFeestje.ViewModels.LoginModel
 
 <!DOCTYPE html>
 <html lang="en">
@@ -16,10 +16,10 @@
             </div>
             <div class="card-body text-center">
                 <p class="fw-bold">De e-mail dat je hebt ingevoerd is:</p>
-                <p class="alert alert-info">@ViewBag.Email</p>
+                <p class="alert alert-info">@Model.Email</p>
 
                 <p class="fw-bold">Het wachtwoord dat je hebt ingevoerd is:</p>
-                <p class="alert alert-info">@ViewBag.Password</p>
+                <p class="alert alert-info">@Model.Password</p>
 
             </div>
             <div class="card-footer text-center">
