--- a/BeestjeOpEenFeestje/Views/Account/CreateUser.cshtml
+++ b/BeestjeOpEenFeestje/Views/Account/CreateUser.cshtml
@@ -1,8 +1,8 @@
-﻿@model BeestjeOpEenFeestje.ViewModels.RegisterModel
+﻿@model BeestjeOpEenFeestje.ViewModels.CreateUserModel
 
-<h2>Register</h2>
+<h2>Gebruiker aanmaken</h2>
 
-<form asp-action="Register" method="post">
+<form asp-action="CreateUser" method="post">
     <div>
         <label asp-for="Username">Naam</label>
         <input asp-for="Username" class="form-control" />
@@ -46,5 +46,19 @@
         <span asp-validation-for="PhoneNumber" class="text-danger"></span>
     </div>
 
-    <button type="submit" class="btn btn-primary">Register</button>
+    <div class="form-group">
+        <label asp-for="Role" class="control-label">Rol</label>
+        <select asp-for="Role" class="form-control">
+            <option value="">Selecteer een rol</option>
+            @foreach (var role in ViewBag.Roles)
+            {
+                <option value="@role">
+                    @role.ToString()
+                </option>
+            }
+        </select>
+        <span asp-validation-for="Role" class="text-danger"></span>
+    </div>
+
+    <button type="submit" class="btn btn-primary">Aanmaken</button>
 </form>
