login works and making new users works, but some thing arent dutch yet

--- a/BeestjeOpEenFeestje/Views/Account/Login.cshtml
+++ b/BeestjeOpEenFeestje/Views/Account/Login.cshtml
@@ -1,6 +1,6 @@
 ﻿@model BeestjeOpEenFeestje.ViewModels.LoginModel
 
-<h2>Gebruiker aanmaken</h2>
+<h2>Inloggen</h2>
 
 <form asp-action="Login" method="post">
     <div>
@@ -15,5 +15,5 @@
         <span asp-validation-for="Password" class="text-danger"></span>
     </div>
 
-    <button type="submit" class="btn btn-primary">Aanmaken</button>
+    <button type="submit" class="btn btn-primary">Inloggen</button>
 </form>
