--- a/BeestjeOpEenFeestje/Views/Shared/_Layout.cshtml
+++ b/BeestjeOpEenFeestje/Views/Shared/_Layout.cshtml
@@ -40,6 +40,9 @@
                                 <li class="nav-item">
                                     <a class="nav-link text-dark" asp-controller="Account" asp-action="CreateUser">Nieuwe gebruiker</a>
                                 </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-controller="Account" asp-action="AccountsList">Gebruikers</a>
+                                </li>
                             }
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-controller="Account" asp-action="Logout">Uitloggen</a>
