--- a/BeestjeOpEenFeestje/Views/Account/AccountsList.cshtml
+++ b/BeestjeOpEenFeestje/Views/Account/AccountsList.cshtml
@@ -1,10 +1,10 @@
-﻿@model IEnumerable<BeestjeOpEenFeestje.ViewModels.AccountListModel>
+﻿@model IEnumerable<BeestjeOpEenFeestje.ViewModels.UpdateUserModel>
 
 @{
-    ViewData["Title"] = "User List";
+    ViewData["Title"] = "Gebruikers";
 }
 
-<h1>User List</h1>
+<h1>Gebruikers</h1>
 
 <table class="table table-striped table-bordered">
     <thead>
@@ -14,7 +14,7 @@
             <th>E-mail</th>
             <th>Telefoonnummer</th>
             <th>Klantenkaart</th>
-            <th>actie</th>
+            <th><a href="@Url.Action("CreateUser", "Account")" class="btn btn-primary">Nieuwe gebruiker</a><th>
         </tr>
     </thead>
     <tbody>
