happy-flow working

--- a/BeestjeOpEenFeestje/Views/Reservation/Date.cshtml
+++ b/BeestjeOpEenFeestje/Views/Reservation/Date.cshtml
@@ -1,5 +1,5 @@
 ﻿
-<form asp-controller="Reservation" asp-action="Step1" method="post">
+<form asp-controller="Reservation" asp-action="SaveDate" method="post">
     <div class="container d-flex justify-content-evenly mt-5">
         <div class="d-flex flex-column col-2 me-5">
             <h4>Kies een datum</h4>
