--- a/BeestjeOpEenFeestje/Views/Reservation/Step1.cshtml
+++ b/BeestjeOpEenFeestje/Views/Reservation/Step1.cshtml
@@ -1,7 +1,24 @@
 ﻿@model BeestjeOpEenFeestje.ViewModels.ReservationModel;
 
-<form asp-controller="Reservation" asp-action="Step2" method="post">
+<form asp-controller="Reservation" asp-action="SaveAnimals" method="post">
     @Html.HiddenFor(Model => Model.Reservation.Id)
+
+    <div class="container my-4">
+        <div class="row justify-content-between align-items-center position-relative">
+            <div class="col-3 text-center">
+                <div class="bg-primary text-white mx-auto">1</div>
+                <small class="d-block mt-2">Beestjes kiezen</small>
+            </div>
+            <div class="col-3 text-center">
+                <div class="bg-secondary text-white mx-auto">2</div>
+                <small class="d-block mt-2">Gegevens invullen</small>
+            </div>
+            <div class="col-3 text-center">
+                <div class="bg-secondary text-white mx-auto">3</div>
+                <small class="d-block mt-2">Bevestigen</small>
+            </div>
+        </div>
+    </div>
 
     <div class="container-fluid">
         <div class="row">
