--- a/BeestjeOpEenFeestje/Views/Animals/UpdateAnimal.cshtml
+++ b/BeestjeOpEenFeestje/Views/Animals/UpdateAnimal.cshtml
@@ -3,21 +3,23 @@
 <h2>Beestje aanmaken</h2>
 
 <form asp-action="UpdateAnimal" method="post">
+
+    <input hidden asp-for="Id" value="@Model.Id")
     <div>
         <label asp-for="Name">Naam</label>
-        <input asp-for="Name" class="form-control" />
+        <input asp-for="Name" value ="@Model.Name"class="form-control" />
         <span asp-validation-for="Name" class="text-danger"></span>
     </div>
 
     <div>
         <label asp-for="Type">Type</label>
-        <input asp-for="Type" class="form-control" />
+        <input asp-for="Type" value="@Model.Type" class="form-control" />
         <span asp-validation-for="Type" class="text-danger"></span>
     </div>
 
     <div>
         <label asp-for="Price">Prijs</label>
-        <input type="number" min="0" max="1000" step="0.01" asp-for="Price" class="form-control" />
+        <input type="number" min="0" max="1000" step="0.01" value="@Model.Price" asp-for="Price" class="form-control" />
         <input type="hidden" asp-for="Price"/>
     </div>
     <div>
