--- a/BeestjeOpEenFeestje/Views/Animals/UpdateAnimal.cshtml
+++ b/BeestjeOpEenFeestje/Views/Animals/UpdateAnimal.cshtml
@@ -4,7 +4,7 @@
 
 <form asp-action="UpdateAnimal" method="post">
 
-    <input hidden asp-for="Id" value="@Model.Id")
+    <input hidden asp-for="Id" value="@Model.Id") />
     <div>
         <label asp-for="Name">Naam</label>
         <input asp-for="Name" value ="@Model.Name"class="form-control" />
