--- a/BeestjeOpEenFeestje/Views/Animal/AnimalList.cshtml
+++ b/BeestjeOpEenFeestje/Views/Animal/AnimalList.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<BeestjeOpEenFeestje.ViewModels.UpdateAnimalModel>
+﻿@model IEnumerable<BeestjeOpEenFeestje.ViewModels.AnimalInfoModel>
 
 @{
     ViewData["Title"] = "Beestjes";
