--- a/BeestjeOpEenFeestje/Views/Animal/UpdateAnimal.cshtml
+++ b/BeestjeOpEenFeestje/Views/Animal/UpdateAnimal.cshtml
@@ -1,10 +1,10 @@
 ﻿@model BeestjeOpEenFeestje.ViewModels.UpdateAnimalModel
 
-<h2>Beestje aanmaken</h2>
+<h2>Beestje Bewerken</h2>
 
 <form asp-action="UpdateAnimal" method="post">
 
-    <input hidden asp-for="Id" value="@Model.Id") />
+    <input hidden asp-for="Id" value="@Model.Id" />
     <div>
         <label asp-for="Name">Naam</label>
         <input asp-for="Name" value ="@Model.Name"class="form-control" />
@@ -21,6 +21,28 @@
         <label asp-for="Price">Prijs</label>
         <input type="number" min="0" max="1000" step="0.01" value="@Model.Price" asp-for="Price" class="form-control" />
         <input type="hidden" asp-for="Price"/>
+    </div>
+
+    <input type="hidden" asp-for="ImageURL" id="ImageURL" value="@Model.ImageURL"/>
+    <div class="dropdown">
+        <button type="button" class="dropbtn">
+            @if (!string.IsNullOrEmpty(Model.ImageURL))
+            {
+                <span>Gekozen plaatje: <img src="@Model.ImageURL" alt="Selected Image" style="width: 50px; height: auto;"></span>
+            }
+            else
+            {
+                <span>Kies een Dierenplaatje</span>
+            }
+        </button>
+        <div class="dropdown-content">
+            @foreach (string path in ViewBag.ImageUrls)
+            {
+                <a href="#" onclick="selectImage('@path')">
+                    <img src="@path" alt="Dierenplaatje" class="dropdown-image">
+                </a>
+            }
+        </div>
     </div>
     <div>
         <button type="submit" class="btn btn-primary">Opslaan</button>
