--- a/BeestjeOpEenFeestje/wwwroot/css/site.css
+++ b/BeestjeOpEenFeestje/wwwroot/css/site.css
@@ -20,3 +20,41 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropbtn {
+    background-color: #4CAF50;
+    color: white;
+    padding: 10px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}
+
+.dropdown:hover .dropbtn {
+    background-color: #3e8e41;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    width: 330px;
+    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    overflow-y: auto;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown-image {
+    width: 100px;
+    height: auto;
+    margin: 10px
+}
