--- a/BeestjeOpEenFeestje/Views/Animal/Reservations.cshtml
+++ b/BeestjeOpEenFeestje/Views/Animal/Reservations.cshtml
@@ -1,40 +1,35 @@
-﻿
+﻿@model IEnumerable<BeestjeOpEenFeestje.ViewModels.ReservationInfoModel>
+
 @{
-    ViewData["Title"] = "Reserveringen";
+    ViewData["Title"] = "Boekingen";
 }
 
-<h1 class="me-5">Reserveringen</h1>
+<h1 class="me-5">Boekingen</h1>
 
 <table class="table table-striped table-bordered">
     <thead>
         <tr>
-            <th>Plaatje</th>
-            <th>Naam</th>
-            <th>Type</th>
-            <th>Prijs</th>
+            <th>DierenNaam</th>
+            <th>Datum</th>
+            <th>Persoon</th>
         </tr>
     </thead>
     <tbody>
         @if (Model != null && Model.Any())
         {
-            foreach (var animal in Model)
+            foreach (var reservation in Model)
             {
                 <tr>
-                    <td><img src="@animal.ImageURL" height="10px" /></td>
-                    <td>@animal.Name</td>
-                    <td>@animal.Type</td>
-                    <td>@animal.Price</td>
-                    <td width="100px"><a href="@Url.Action("UpdateAnimal", "Animal", new { Id = animal.Id })" class="btn btn-primary">Bewerk</a>
-                    <td>
-                    <td width="100px"><a href="@Url.Action("AnimalInfo", "Animal", new { animal.Reservations })" class="btn btn-primary">Boekingen</a>
-                    <td>
+                    <td>@reservation.AnimalName</td>
+                    <td>@reservation.Date.ToString("dd-MM-yyyy")</td>
+                    <td>@reservation.Username</td>
                 </tr>
             }
         }
         else
         {
             <tr>
-                <td colspan="6" class="text-center">Geen Beestjes gevonden</td>
+                <td colspan="6" class="text-center">Geen boekingen gevonden</td>
             </tr>
         }
     </tbody>
