--- a/BeestjeOpEenFeestje/Views/Animal/CreateAnimal.cshtml
+++ b/BeestjeOpEenFeestje/Views/Animal/CreateAnimal.cshtml
@@ -17,7 +17,7 @@
 
     <div>
         <label asp-for="Price">Prijs</label>
-        <input type="number" min="0" max="1000" step="0.01" value="@Model.Price" asp-for="Price" class="form-control" />
+        <input asp-for="Price" class="form-control" />
         <span asp-validation-for="Price" class="text-danger"></span>
     </div>
 
