animal availability + compatability with accounts

--- a/BeestjeOpEenFeestje/Views/Reservation/Step1.cshtml
+++ b/BeestjeOpEenFeestje/Views/Reservation/Step1.cshtml
@@ -54,7 +54,7 @@
                                             <div class="mb-1">
                                                 @animal.Name
                                             </div>
-                                            <input class="form-check-input" type="checkbox" name="SelectedAnimals" value="@animal.Name" />
+                                            <input class="form-check-input" type="checkbox" name="SelectedAnimals" value="@animal.Id" />
                                         </div>
                                         <div class="card-body d-flex align-items-center">
                                             <img src="@animal.ImageURL" alt="@animal.Name" class="card-img" />
