--- a/BeestjeOpEenFeestje/Views/Reservation/Step3.cshtml
+++ b/BeestjeOpEenFeestje/Views/Reservation/Step3.cshtml
@@ -29,12 +29,16 @@
                     </h4>
                     <div class="card-body row">
                         <div class="col-2">
+                            <h4>Contactgegevens:</h4>
                             <label>Naam:</label>
                             <p>@Model.Name</p>
                             <label>E-mail:</label>
                             <p>@Model.Email</p>
                             <label>Adres:</label>
                             <p>@Model.Address</p>
+                            <br />
+                            <h4>Prijs / Korting:</h4>
+
                             <button type="submit" class="btn btn-outline-dark">Bevestig</button>
                         </div>
                     </div>
