animal validation messages

--- a/BeestjeOpEenFeestje/Views/Shared/_ReservationOverview.cshtml
+++ b/BeestjeOpEenFeestje/Views/Shared/_ReservationOverview.cshtml
@@ -13,7 +13,7 @@
             <ul>
                 @foreach (Animal animal in Model.Animals)
                 {
-                    <li>@animal.Name - € @animal.Price</li>
+                    <li>@animal.Name - € @animal.Price.ToString("F2")</li>
                 }
             </ul>
         </div>
