--- a/BeestjeOpEenFeestje/Views/Reservation/Step1.cshtml
+++ b/BeestjeOpEenFeestje/Views/Reservation/Step1.cshtml
@@ -42,11 +42,7 @@
                             else
                             {
                                 <p class="text-danger">
-                                    @Html.ValidationMessageFor(m => m.SelectedAnimals)
-                                    @if (availabilityError != null)
-                                    {
-                                        @availabilityError.ErrorMessage
-                                    }
+                                    @Html.ValidationSummary()
                                 </p>
                                 ViewData.ModelState.Clear();
                             }
@@ -56,8 +52,8 @@
                             {
                                 <div class="col-2 mb-3">
                                     <div class="card h-100">
-                                        <div class="card-header d-flex flex-column align-items-center">
-                                            <div class="mb-1">
+                                        <div class="card-header d-flex flex-column align-items-center text-break">
+                                            <div class="mb-1 text-break">
                                                 @animal.Name
                                             </div>
                                             <input class="form-check-input" type="checkbox" name="SelectedAnimals" value="@animal.Id" />
