--- a/BeestjeOpEenFeestje/Views/Reservation/Step3.cshtml
+++ b/BeestjeOpEenFeestje/Views/Reservation/Step3.cshtml
@@ -1,7 +1,7 @@
-﻿@model BeestjeOpEenFeestje.Models.Reservation;
+﻿@model BeestjeOpEenFeestje.ViewModels.ReservationPriceModel;
 
 <form asp-controller="Reservation" asp-action="Confirm" method="post">
-    @Html.HiddenFor(Model => Model.Id)
+    @Html.HiddenFor(Model => Model.Reservation.Id)
 
     <div class="container my-4">
         <div class="row justify-content-between align-items-center position-relative">
@@ -27,25 +27,34 @@
                     <h4 class="card-header">
                         Stap 3 - Controleer reservering
                     </h4>
-                    <div class="card-body row">
-                        <div class="col-2">
-                            <h4>Contactgegevens:</h4>
-                            <label>Naam:</label>
-                            <p>@Model.Name</p>
-                            <label>E-mail:</label>
-                            <p>@Model.Email</p>
-                            <label>Adres:</label>
-                            <p>@Model.Address</p>
-                            <br />
-                            <h4>Prijs / Korting:</h4>
-
-                            <button type="submit" class="btn btn-outline-dark">Bevestig</button>
-                        </div>
+                    <div class="card-body d-flex flex-column">
+                        <h4>Contactgegevens:</h4>
+                        <label>Naam:</label>
+                        <p>@Model.Reservation.Name</p>
+                        <label>E-mail:</label>
+                        <p>@Model.Reservation.Email</p>
+                        <label>Adres:</label>
+                        <p>@Model.Reservation.Address</p>
+                        <br />
+                        <h4>Prijs / Korting:</h4>
+                        <ul>
+                            @foreach (Animal animal in Model.Reservation.Animals)
+                            {
+                                <li>@animal.Name: € @animal.Price.ToString("F2")</li>
+                            }
+                            @foreach (Discount discount in Model.Discounts)
+                            {
+                                <li>@discount.Name: @discount.Amount%</li>
+                            }
+                        </ul>
+                        <br />
+                        <h4>Totaal: € @Model.PriceTotal.ToString("F2")</h4>
+                        <button type="submit" class="btn btn-outline-dark col-1">Bevestig</button>
                     </div>
                 </div>
             </div>
             <div class="col-4">
-                @await Html.PartialAsync("_ReservationOverview", Model)
+                @await Html.PartialAsync("_ReservationOverview", Model.Reservation)
             </div>
         </div>
     </div>
